--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,19 +38,21 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "autodoc-pydantic>=2.2.0",
     "black>=25.1.0",
     "build>=1.2.2.post1",
-    "furo>=2024.8.6",
     "isort>=6.0.1",
     "pyclean>=3.1.0",
     "pylint>=3.3.7",
     "pytest>=8.4.0",
     "ruff>=0.11.6",
+    "twine>=6.1.0",
+]
+docs = [
+    "autodoc-pydantic>=2.2.0",
+    "furo>=2024.8.6",
     "sphinx>=8.2.3",
     "sphinx-copybutton>=0.5.2",
     "sphinx-rtd-theme>=3.0.2",
-    "twine>=6.1.0",
 ]
 
 [project.urls]
